--- a/src/main/java/in/edu/kristujayanti/emailtemplates/signupemail.html
+++ b/src/main/java/in/edu/kristujayanti/emailtemplates/signupemail.html
@@ -25,7 +25,7 @@
                 <!-- Header with gradient background -->
                 <tr>
                     <td style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 40px 40px 30px 40px; text-align: center;">
-                        <img src="https://i.postimg.cc/XvVgQk6H/qvaultlogo-blck.png" alt="Qvault" width="280" height="auto" class="logo" style="display: block; margin: 0 auto; max-width: 100%;" />
+                        <img src="https://qvault-bucket.s3.ap-south-1.amazonaws.com/qvaultlogo+blck.png" alt="Qvault" width="280" height="auto" class="logo" style="display: block; margin: 0 auto; max-width: 100%;" />
                     </td>
                 </tr>
 
