Upload QP with JWT Authentication done. Email logo view update.

--- a/src/main/java/in/edu/kristujayanti/emailtemplates/forgotpass.html
+++ b/src/main/java/in/edu/kristujayanti/emailtemplates/forgotpass.html
@@ -10,7 +10,7 @@
         table { border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; }
         @media only screen and (max-width: 600px) {
             .container { width: 100% !important; }
-            .logo { width: 200px !important; height: auto !important; }
+            .logo { width: auto !important; height: auto !important; }
             .code-box { font-size: 28px !important; padding: 12px 20px !important; }
         }
     </style>
@@ -24,8 +24,8 @@
 
                 <!-- Header with gradient background -->
                 <tr>
-                    <td style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); padding: 40px 40px 30px 40px; text-align: center;">
-                        <img src="https://qvault-bucket.s3.ap-south-1.amazonaws.com/qvaultlogo+blck.png" alt="Qvault" width="280" height="auto" class="logo" style="display: block; margin: 0 auto; max-width: 100%;" />
+                    <td style="background: white; padding:0; text-align: center;">
+                        <img src="https://qvault-bucket.s3.ap-south-1.amazonaws.com/qvaultlogo+blck.png" alt="Qvault" width="auto" height="auto" class="logo" style="display: block; margin: 0 auto; max-width: 100%;" />
                     </td>
                 </tr>
 
