Email sending updated with better logo embedding.

--- a/src/main/java/in/edu/kristujayanti/emailtemplates/forgotpass.html
+++ b/src/main/java/in/edu/kristujayanti/emailtemplates/forgotpass.html
@@ -25,7 +25,7 @@
                 <!-- Header with gradient background -->
                 <tr>
                     <td style="background: white; padding:0; text-align: center;">
-                        <img src="https://qvault-bucket.s3.ap-south-1.amazonaws.com/qvaultlogo+blck.png" alt="Qvault" width="auto" height="auto" class="logo" style="display: block; margin: 0 auto; max-width: 100%;" />
+                        <img src="{{logo}}" alt="Qvault" width="auto" height="auto" class="logo" style="display: block; margin: 0 auto; max-width: 100%;" />
                     </td>
                 </tr>
 
